syntax = "proto3";
package sro.gamebackend;
option go_package = "pkg/pb";

import "google/api/annotations.proto";
import "sro/characters/characters.proto";

service ConnectionService {
  rpc ConnectGameServer(sro.characters.CharacterTarget)
      returns (ConnectGameServerResponse) {
    option (google.api.http) = {
      get : "/v1/connect/character/id/{id}"
      additional_bindings : {get : "/v1/connect/character/name/{name}"}
    };
  }

  rpc IsPlaying(sro.characters.CharacterTarget)
      returns (ConnectGameServerResponse) {
    option (google.api.http) = {
      get : "/v1/status/character/id/{id}"
    };
  }
}

message ConnectGameServerResponse {
  string address = 1;
  uint32 port = 2;
  string connection_id = 3;
}
